Remove scroll-snap-stop:always; disable pruning (eliminates scrollLeft adjustment jumps)

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
 
 .item {
   scroll-snap-align: start;
-  scroll-snap-stop: always;
   width: 100vw;
   height: 100vh;
   flex-shrink: 0;
